# ai-image-app

./: .gitignore  README.md  start-be.sh  start-fe.sh
backend/: app.py  genImages.py  latentDiff.py  pyproject.toml  setup.sh
backend/additionalpipelines/: imgtoimg.py
frontend/: package-lock.json  package.json
frontend/pages/: index.jsx
